--- a/career.html
+++ b/career.html
@@ -8,6 +8,8 @@
     <!-- custom theme styles -->
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
     <link href="css/custom.css" rel="stylesheet" type="text/css">
+    <!-- media-queries styles -->
+    <link href="css/media-queries.css" rel="stylesheet" type="text/css">      
     <!-- responsive theme styles -->
     <link href="css/responsive-styles.css" rel="stylesheet" type="text/css">
     <!-- flexslider styles -->
@@ -107,7 +109,7 @@
     <div class="footer-top">
       <div class="wrapper">  
         <div class="row">
-          <div class="col-md-5">
+          <div class="col-md-5 col-sm-8">
             <h3>Latest News</h3>
             <div class="latestNews"> 
                 <ul class="slides">
@@ -117,7 +119,7 @@
                 </ul>
               </div>    
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 col-sm-4">
             <div class="address">  
             <h3>Contact Us</h3>
             <p>Address: 21250 Barley Hall Ter,<br/>
@@ -128,7 +130,7 @@
             Email: info@mprsoft.com </p>
         </div>        
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 col-sm-12">
               <h3>SEND US A MESSAGE</h3>
               <p>If you're having problems about service, then don't hesitate to ask for help on the Forums.</p>
               <button class="btn send-email-btn" type="button">Click to send us an email</button>
@@ -139,10 +141,10 @@
     <div class="bottom-footer">
       <div class="wrapper">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 col-sm-6">
             <p>© Copyright 2014.mprsoftinc. All Rights Reserved.</p>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 col-sm-6">
               <ul class="social-links">
                   <li><a class="facebook" href="#"></a></li>
                   <li><a class="twitter" href="#"></a></li>
@@ -156,9 +158,6 @@
   </footer> 
   <script type="text/javascript" src="js/jquery.flexslider.js"></script>
   <script type="text/javascript">
-    $(function(){
-      SyntaxHighlighter.all();
-    });
     $(window).load(function(){
       $('.flexslider').flexslider({
         animation: 'slide',
