--- a/software.html
+++ b/software.html
@@ -8,6 +8,8 @@
     <!-- custom theme styles -->
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
     <link href="css/custom.css" rel="stylesheet" type="text/css">
+    <!-- media-queries styles -->
+    <link href="css/media-queries.css" rel="stylesheet" type="text/css">      
     <!-- responsive theme styles -->
     <link href="css/responsive-styles.css" rel="stylesheet" type="text/css">
     <!-- flexslider styles -->
@@ -176,9 +178,6 @@ Our custom application development services include:</p>
   </footer> 
   <script type="text/javascript" src="js/jquery.flexslider.js"></script>
   <script type="text/javascript">
-    $(function(){
-      SyntaxHighlighter.all();
-    });
     $(window).load(function(){
       $('.flexslider').flexslider({
         animation: 'slide',
